--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -6,13 +6,13 @@
 
         <variable
             name="homeItemViewModel"
-            type="com.digitaleg.pinterestdownloadmanager.home.HomeItemViewModel" />
+            type="com.digitaleg.pinterestdownloadmanager.home.card.HomeCardViewModel" />
     </data>
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="250dp"
         android:layout_margin="12dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp">
@@ -23,14 +23,10 @@
 
             <ImageView
                 android:id="@+id/imageview"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                app:bitmap="@{homeItemViewModel.coverBitmap}"
+                app:imageUrl="@{homeItemViewModel.imageUrl}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
