--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,11 +13,11 @@
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:listToRefresh="@{homeVM.cardList}"
-        app:swipeToRefresh="@{recyclerView}">
+        app:gridViewToRefresh="@{gridview}"
+        app:listToRefresh="@{homeVM.cardList}">
 
         <GridView
-            android:id="@+id/recyclerView"
+            android:id="@+id/gridview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="6dp"
@@ -27,7 +27,8 @@
             android:stretchMode="columnWidth"
             android:verticalSpacing="6dp"
             app:adapter="@{homeVM.cardAdapter}"
-            app:cardList="@{homeVM.cardList}" />
+            app:cardList="@{homeVM.cardList}"
+            app:loadMore="@{homeVM.loadMore}" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
