--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,11 +9,13 @@
             type="com.digitaleg.pinterestdownloadmanager.home.card.HomeCardViewModel" />
     </data>
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_margin="12dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp">
 
@@ -25,6 +27,7 @@
                 android:id="@+id/imageview"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:contentDescription="@string/cover_image"
                 android:scaleType="centerCrop"
                 app:imageUrl="@{homeItemViewModel.imageUrl}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -32,8 +35,21 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </android.support.constraint.ConstraintLayout>
+            <ImageView
+                android:id="@+id/profilePic"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="@string/profile_picture"
+                android:scaleType="centerCrop"
+                app:imageUrl="@{homeItemViewModel.profilePicUrl}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 </layout>
